fix Chat Display, change z-index
чат отображается теперь с листом ссылок слева, а не без них.
модальные окна админ панели отображаются поверх всех элементов, даже с position

--- a/src/components/Profile/ProfileListAdvertisments/ads.module.css
+++ b/src/components/Profile/ProfileListAdvertisments/ads.module.css
@@ -28,7 +28,7 @@
 }
 
 .passiveButton {
-    opacity: 0.6;
+    color: rgb(193, 193, 193);
 }
 
 .passiveButton:hover {
