--- a/src/components/Profile/ProfileMessenger/messenger.module.css
+++ b/src/components/Profile/ProfileMessenger/messenger.module.css
@@ -1,5 +1,6 @@
 .appContainer 
 {
+    width: 100%;
     display: flex;
     justify-content: center;
     padding: 20px;
@@ -22,7 +23,7 @@
 }
 
 .name_container {
-    font-size: 20px;
+    font-size: 26px;
     font-weight: 700;
     padding-bottom: 15px;
 }
